2009-11-08  Neil Williams  <linux@codehelp.co.uk>

	* src/ebookui.c: Wrong prototype for delete_cb when
	called as a delete_event, add delete_event_cb and use
	only in the delete_event signal. (Closes: #8)

2009-11-08  Neil Williams  <linux@codehelp.co.uk>

	* src/ebookui.c: Wrap gtk_spell attach/detach hook when
	loading files to allow compilation when gtkspell is not
	available. (Closes: #7)

2009-11-07  Neil Williams  <linux@codehelp.co.uk>

	* src/main.c: Ensure g_type_init is called before testing
	gconf_client. (Closes: #6)

2009-11-04  Neil Williams  <linux@codehelp.co.uk>

	* configure.ac: Add -Wl,--no-add-needed in extra-compile-warning
	mode to catch missing linkages.

2009-10-22  Neil Williams  <linux@codehelp.co.uk>

	* src/ebookui.c: Enable progressbar monitoring of
	PDF load as a background task.
	* src/main.c: Enable documentors now that the Manual
	exists.
	* src/spell.c: Ensure a usable font is requested
	before trying to change to it.

2009-10-20  Neil Williams  <linux@codehelp.co.uk>

	* help/C/gpdftext.xml: Fix duplication, Activate +
	  Choose.
	* help/de/de.po: Tweak for XML change.
	* po/de.po: Correct translation of 'Lengthen lines'.
	* src/gpdftext.glade: Add comment to help explain
	  the translation of 'Lengthen lines'.

2009-10-20  Neil Williams  <linux@codehelp.co.uk>

	* help/Makefile.am: Add German translation.
	* help/de/de.po: German translation of Manual by
	  "Hilmar Ackermann" <Hilmar.Ackermann@gmx.de>

2009-10-18  Neil Williams  <linux@codehelp.co.uk>

	* configure.ac: Add extra compiler warnings, optional.
	* po/POTFILES.in: Add spell.c
	* src/Makefile.am: Add spell.c
	* src/ebookui.c: Enable spellchecking and font selection.
	* src/ebookui.h: Make the EBook struct public.
	* src/gpdftext.glade: Remove duplicate licence text.
	* src/main.c: Remove duplicate about box comment.
	* src/spell.c: New file for spelling and font handling.
	* src/spell.h: New file.

2009-10-17  Neil Williams  <linux@codehelp.co.uk>
