@@ -1,3 +1,8 @@
+2009-11-18  Neil Williams  <linux@codehelp.co.uk>
+
+	* src/ebookui.c: Add handler for activating and
+	deactivating Save button and menu. (Closes: #3)
+
 2009-11-08  Neil Williams  <linux@codehelp.co.uk>
 
 	* src/ebookui.c: Wrong prototype for delete_cb when
